@@ -13,6 +13,9 @@ HISTORY
 
   ++ New features:
 
+  2010-05-13: Simon Goldschmidt
+  * tcp.c, udp.c: task #6995: Implement SO_REUSEADDR (correctly)
+
   2010-05-02: Simon Goldschmidt
   * netbuf.h/.c, sockets.c, api_msg.c: use checksum-on-copy for sending
     UDP data for LWIP_NETIF_TX_SINGLE_PBUF==1
